--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "html": "^1.0.0",
     "jsonexport": "^2.0.11",
     "knex": "^0.14.2",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
-    "nodemailer": "^4.4.0",
-    "nodemon": "^1.12.1",
+    "nodemailer": "^4.4.1",
+    "nodemon": "^1.14.11",
     "oauth": "^0.9.15",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.4",
